# volsync-webui

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  flake.nix
backend/: Cargo.toml
backend/src/: api.rs  kubectl.rs  main.rs  models.rs
docs/: api.md  development.md
example/: helm-release.yaml
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  style.css  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.rs  api.ts  index.css  lib.rs  main.rs  style.css  types.ts
frontend/src/components/: app-detail.tsx  app-selector.tsx  app.rs  app_selector.rs  apps-table.tsx  backup-panel.tsx  backup_panel.rs  log-stream.tsx  mod.rs  namespace-selector.tsx  namespace.rs  restore-panel.tsx  restore_panel.rs  snapshot-list.tsx  snapshot_list.rs
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  select.tsx  table.tsx
frontend/src/lib/: utils.ts
helm-charts/volsync-webui/: Chart.yaml  values.yaml
helm-charts/volsync-webui/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
kube-manifests/: 00-namespace-rbac.yaml  01-clusterrolebinding.yaml  02-deployment.yaml  03-service.yaml
