[workspace]
resolver = "2"
members = ["backend", "frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Volsync WebUI Team"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
reqwasm = "0.5"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1